--- a/BombasticBookstore/bombasticbookstore/static/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/general.css
@@ -5,6 +5,7 @@ main {
   justify-content: center;
   align-items: center;
   position: fixed;
+  margin-top: 200px;
   top: 50%;
   left: 50%;
   width: 1000px;
