--- a/BombasticBookstore/bombasticbookstore/templates/logo.html
+++ b/BombasticBookstore/bombasticbookstore/templates/logo.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Bombastic Bookstore{% endblock %}</title>
-	<link rel="stylesheet" href="{% static 'styles/theme.css' %}">
+	<link rel="stylesheet" href="{% static 'styles/theme.css' %}" id="theme-link">
     <link rel="stylesheet" href="{% static 'js/theme.js' %}" defer>
     <link rel="stylesheet" href="{% static 'styles/general.css' %}">
     <link rel="stylesheet" href="{% static 'styles/header.css' %}">
@@ -22,19 +22,19 @@
 		}
 	</style>
 </head>
-<body>
+<body class="{% if request.COOKIES.theme %}{{ request.COOKIES.theme }}{% else %}light{% endif %}">
 	<header>
-		<div class="left-section">
+		<div class="left-section theme-dependent">
 			<img class="bomb-logo" src='{% static "./bomb4.png" %}' alt="Bombastic Bookstore Logo">
 		</div>
-		<div class="middle-section">
+		<div class="middle-section theme-dependent">
 			<p>Bombastic Bookstore</p>
 		</div>
-		<div class="right-section">
+		<div class="right-section theme-dependent">
 			<p>Welcome, {{ user.username }}!</p>
 		</div>
 	</header>
-	  <nav class="nav-bar">
+	  <nav class="nav-bar theme-dependent">
 		<ul>
 		<li><a href="{% url 'index' %}">Main</a></li>
 		  <li><a href="{% url 'add_book' %}">Add Item</a></li>
