--- a/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
+++ b/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
@@ -11,13 +11,11 @@
 	<link rel="stylesheet" href="{% static 'styles/theme.css' %}">
 	<script src="{% static 'js/theme.js' %}" defer></script>
 </head>
+<body class="{% if request.COOKIES.theme %}{{ request.COOKIES.theme }}{% else %}light{% endif %}">
 {% block content %}
-<body>
 <main>
-	
 	<h1 class="title">User Settings</h1>	
-	
-	<div class="card">	
+	<div class="card theme-dependent">	
 		<form method="post">
 			{% csrf_token %}
 			<!--{{ form.as_p }}-->
