Change Bomb logo

--- a/BombasticBookstore/bombasticbookstore/templates/logo.html
+++ b/BombasticBookstore/bombasticbookstore/templates/logo.html
@@ -25,7 +25,7 @@
 <body>
 	<header>
 		<div class="left-section">
-			<img class="bomb-logo" src='{% static "./bomb4.png" %}' alt="Bombastic Bookstore Logo">
+			<img class="bomb-logo" src='{% static "./bomb_no_text.png" %}' alt="Bombastic Bookstore Logo">
 		</div>
 		<div class="middle-section">
 			<p>Bombastic Bookstore</p>
