--- a/BombasticBookstore/bombasticbookstore/templates/add_book/add_book.html
+++ b/BombasticBookstore/bombasticbookstore/templates/add_book/add_book.html
@@ -7,10 +7,10 @@
     <title>Add Book</title>
 	<link rel="stylesheet" href="{% static 'styles/general.css' %}">
 	<link rel="stylesheet" href="{% static 'styles/theme.css' %}">
-	<script src="{% static 'js/theme.js' %}" defer></script>
 </head>
+
+<body class="{% if request.COOKIES.theme %}{{ request.COOKIES.theme }}{% else %}light{% endif %}"></body>>
 {% block content %}
-<body>
 <main>  
 	<div class="container">
 		<h1>Add a New Book</h1>
@@ -21,6 +21,7 @@
 		</form>
 	</div>
 </main>
-</body>
 {% endblock %}
+</body>
+
 </html>
