--- a/BombasticBookstore/bombasticbookstore/static/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/general.css
@@ -16,19 +16,6 @@ main {
   border-radius: 25px;
 }
 
-.main{
-  padding: 100px;
-  justify-content: center;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 500px;
-  transform: translate(-50%, -50%);
-  background-color: rgba(11,11,11,1);
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  border-radius: 25px;
-}
-
 .search {
 	width: 100%;
 }
@@ -65,6 +52,7 @@ padding: 10px 0;
 text-align: center;
 }
 
+
 ul {
 list-style: none;
 }
@@ -92,7 +80,8 @@ padding: 5px 10px;
 }
 
 .nav-bar a:hover {
-background-color: #555;
+background-color: white;
+color: black;
 border-radius: 5px;
 }
 
