--- a/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
+++ b/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
@@ -5,30 +5,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>User Settings</title>
-	<!-- Include Bootstrap CSS in your base.html -->
-	<link rel="stylesheet" href="{% static 'styles/general.css' %}">
-	<link rel="stylesheet" href="{% static 'styles/theme.css' %}">
-	<script src="{% static 'js/theme.js' %}" defer></script>
-</head>
-<body class="{% if request.COOKIES.theme %}{{ request.COOKIES.theme }}{% else %}light{% endif %}">
+    <title>User Settings</title>
+    <!-- Include Bootstrap CSS in your base.html -->
+    <link rel="stylesheet" href="{% static 'styles/general.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/theme.css' %}">
 {% block content %}
-<main>
-	<h1 class="title">User Settings</h1>	
-	<div class="card theme-dependent">	
-		<form method="post">
-			{% csrf_token %}
-			<!--{{ form.as_p }}-->
-			 <label for="theme-select">Theme:</label>
-    		<select id="theme-select">
-        		<option value="light">Light</option>
-        		<option value="dark">Dark</option>
-    		</select>
+    <script src="{% static 'js/theme.js' %}" defer></script>
+</head>
+<body>
 
-			<button type="submit">Save changes</button>
-		</form>
-	</div>
+<main>
+    <h1 class="title">User Settings</h1>    
+    <div class="card theme-dependent">    
+        <form method="post">
+			{{ form.as_p }}
+            {% csrf_token %}
+            <label for="theme-select">Theme:</label>
+            <select id="theme-select" name="theme">
+                <option value="light">Light</option>
+                <option value="dark">Dark</option>
+            </select>
+            <button type="submit">Save changes</button>
+        </form>
+    </div>
 </main>
-</body>
 {% endblock %}
+</body>
 </html>
