--- a/BombasticBookstore/bombasticbookstore/templates/logo.html
+++ b/BombasticBookstore/bombasticbookstore/templates/logo.html
@@ -38,8 +38,7 @@
 		<ul>
 		<li><a href="{% url 'index' %}">Main</a></li>
 		  <li><a href="{% url 'add_book' %}">Add Item</a></li>
-		  <li><a href="/search/">Update Quantities</a></li>
-		  <li><a href="/search/">Search Items</a></li>
+		  <li><a href="/search/">Update Quantities / Search Items</a></li>
 		  <li><a href="/view_all/">View All Items</a></li>
 		  <li><a href="/settings/">Settings</a></li>
 		  <li><a href="{% url 'logout' %}">Sign Out</a></li>
