--- a/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
+++ b/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
@@ -5,29 +5,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>User Settings</title>
-    <!-- Include Bootstrap CSS in your base.html -->
-    <link rel="stylesheet" href="{% static 'styles/general.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/theme.css' %}">
-{% block content %}
-    <script src="{% static 'js/theme.js' %}" defer></script>
+	<title>User Settings</title>
 </head>
+{% block content %}
 <body>
-
 <main>
-    <h1 class="title">User Settings</h1>    
-    <div class="card theme-dependent">    
-        <form method="post">
-			{{ form.as_p }}
-            {% csrf_token %}
-            <label for="theme-select">Theme:</label>
-            <select id="theme-select" name="theme">
-                <option value="light">Light</option>
-                <option value="dark">Dark</option>
-            </select>
-            <button type="submit">Save changes</button>
-        </form>
-    </div>
+	<div class="container">
+		<h1 class="title">User Settings</h1>    
+		<div class="theme-dependent">    
+			<form method="post">
+				{{ form.as_p }}
+				{% csrf_token %}
+				<!-- <label for="theme-select">Theme:</label>
+				<select id="theme-select" name="theme">
+					<option value="light">Light</option>
+					<option value="dark">Dark</option>
+				</select>
+				<button type="submit">Save changes</button> -->
+			</form>
+		</div>
+	</div>
 </main>
 {% endblock %}
 </body>
