--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -9,16 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <title>Filter Form</title>
-    <link rel="stylesheet" href="{% static 'styles/theme.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/header.css' %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
 
 <body class="{% if request.COOKIES.theme %}{{ request.COOKIES.theme }}{% else %}light{% endif %}">
 	{% block content %}
     <div class="header">
-		<h1 align="center">Store Inventory</h1>
+		<h1>Store Inventory</h1>
 		<form method="GET" action=".">
 			<div class="row justify-content-center">
 				<div class="form-group col-md-2">
@@ -62,34 +58,37 @@
 						<button type="submit" class="btn btn-primary">Search</button> 
 					</div>
 				</div><br>
-				<div align="center">Filtered by:  <b>{{flagcat}},{{flagauth}},  {{instock}}</b></div>
+				<div>Filtered by:  <b>{{flagcat}},{{flagauth}},  {{instock}}</b></div>
 			</div>
 		</form>
 	</div>
 	
-<div id="container" style=" margin:0px ; column-count:3 ;min-width: 33%; column-gap: 20px;padding:20px;break-inside: avoid;"> 
-    <ul style="position: relative; height: 100%; width: 100%">
-        {% for book in queryset %}
-        <div class="search-card" style="padding:10px; display:inline-block; border: 1px solid;">
-            <div class="media" style="min-height: 300px; display: flex; font-size: 1.7vh; padding: 10px; break-inside: avoid;">
-				<br>
-				<img src="{{ book.thumbnail }}" height="192px" width="128px"> 
-				<div class="media-body" style="text-align:left; display: inline-block">
-					<ul>
-						<li><b>ISBN:</b> <span style="font-size: 1.4vh;"> {{ book.isbn10 }} </span></li>
-						<li><b>Title:</b> <span style="font-size: 1.4vh;">{{ book.title }}</span></li>
-						<li><b>Author:</b> <span style="font-size: 1.4vh;">{{ book.author_first }} {{ book.author_last }}</span></li>
-						<li><b>Category:</b> <span style="font-size: 1.4vh;">{{ book.categories }}</span></li>
-						<li><b>Pub year:</b> <span style="font-size: 1.4vh;">{{ book.published_year }}</span></li>
-						<li><b>Pages:</b> <span style="font-size: 1.4vh;">{{ book.num_pages }}</span></li>
-						<li><b>Store inventory:</b> <a href="{% url 'adjust_qty' book.id%}"><span style="font-size: 1.4vh;">{{book.book_id.quantity}}</span></a></li>
-					</ul>
+<main>
+	<div id="container" style=" margin:0px ; column-count:3 ;min-width: 33%; column-gap: 20px;padding:20px;break-inside: avoid;"> 
+		<ul style="position: relative; height: 100%; width: 100%">
+			{% for book in queryset %}
+			<div class="search-card" style="padding:10px; display:inline-block; border: 1px solid;">
+				<div class="media" style="min-height: 300px; display: flex; font-size: 1.7vh; padding: 10px; break-inside: avoid;">
+					<br>
+					<img src="{{ book.thumbnail }}" height="192px" width="128px"> 
+					<div class="media-body" style="text-align:left; display: inline-block">
+						<ul>
+							<li><b>ISBN:</b> <span style="font-size: 1.4vh;"> {{ book.isbn10 }} </span></li>
+							<li><b>Title:</b> <span style="font-size: 1.4vh;">{{ book.title }}</span></li>
+							<li><b>Author:</b> <span style="font-size: 1.4vh;">{{ book.author_first }} {{ book.author_last }}</span></li>
+							<li><b>Category:</b> <span style="font-size: 1.4vh;">{{ book.categories }}</span></li>
+							<li><b>Pub year:</b> <span style="font-size: 1.4vh;">{{ book.published_year }}</span></li>
+							<li><b>Pages:</b> <span style="font-size: 1.4vh;">{{ book.num_pages }}</span></li>
+							<li><b>Store inventory:</b> <a href="{% url 'adjust_qty' book.id%}"><span style="font-size: 1.4vh;">{{book.book_id.quantity}}</span></a></li>
+						</ul>
+					</div>
 				</div>
-            </div>
-        </div>
-        {% endfor %}
-    </ul>
-</div>
+			</div>
+			{% endfor %}
+		</ul>
+	</div>
+</main>
+</body>
 {% endblock %}
 </body>
 
