--- a/BombasticBookstore/bombasticbookstore/templates/report.html
+++ b/BombasticBookstore/bombasticbookstore/templates/report.html
@@ -14,6 +14,7 @@
 	<style>
 		table, th, td {
 		border: 1px solid black;
+		color: black
 	}
 		td:nth-child(even), th:nth-child(even) {
 		background-color: #dfebeb;
