--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -13,11 +13,11 @@
 
 <body class="{% if request.COOKIES.theme %}{{ request.COOKIES.theme }}{% else %}light{% endif %}">
 	{% block content %}
-    <div class="header">
-		<h1>Store Inventory</h1>
+    <div class="header" style="background:rgba (51, 170, 51, .9); ">
+		<h1 align="center">Store Inventory</h1>
 		<form method="GET" action=".">
 			<div class="row justify-content-center">
-				<div class="form-group col-md-2">
+				<div class="form-group col-md-2" >
 					<label for="category"><em>Category</em></label>
 					<select id="category" class="form-control" name="category">
 						<option selected>Choose...</option>
@@ -28,10 +28,8 @@
 						{% endfor %}
 					</select> 
 				</div>
-				<div class="form-group col-sm-2">
-					<div style="position: absolute;top:35%;left:50%"></div>
-				</div>
-				<div class="form-group col-md-2">
+
+				<div class="form-group col-md-2" >
 					<label for="author"><em>Author</em></label>
 					<select id="author" class="form-control" name="author">
 						<option selected>Choose...</option>
@@ -43,22 +41,27 @@
 					</select>
 					<br>
 				</div>
-				<div class="form-group col-sm-1"  style="display: block; float:right;">
-					<div>
+				<br>
+				
+				<div class="form-group col-md-2"  style="float:left;">
+					
 						<div class="form-check" >
-						  <input class="form-check-input" type="checkbox" id="in-stock" name="in-stock">
+						  
 						  <label class="form-check-label" for="in-stock">
-							In-Stock only
+							<em>In-Stock only</em>
 						  </label>
+						  <input class="form-check-input" type="checkbox" id="in-stock" name="in-stock">
 						</div>
-					</div>
+					
 				</div>
-				<div class="form-group col-sm-1" style="float:right;">
+				<br>
+				<div class="form-group col-sm-1" style="position: absolute;">
+					<br>
 					<div>
 						<button type="submit" class="btn btn-primary">Search</button> 
 					</div>
 				</div><br>
-				<div>Filtered by:  <b>{{flagcat}},{{flagauth}},  {{instock}}</b></div>
+				<div align="center">Filtered by:  <b>{{flagcat}},{{flagauth}},  {{instock}}</b></div>
 			</div>
 		</form>
 	</div>
@@ -69,7 +72,7 @@
 			{% for book in queryset %}
 			<div class="search-card" style="padding:10px; display:inline-block; border: 1px solid;">
 				<div class="media" style="min-height: 300px; display: flex; font-size: 1.7vh; padding: 10px; break-inside: avoid;">
-					<br>
+					
 					<img src="{{ book.thumbnail }}" height="192px" width="128px"> 
 					<div class="media-body" style="text-align:left; display: inline-block">
 						<ul>
