--- a/BombasticBookstore/bombasticbookstore/static/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/general.css
@@ -93,6 +93,7 @@ border-radius: 5px;
 .search-card:hover {
 background-color: white;
 box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+color:black
 }
 
 .card {
