--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -68,9 +68,9 @@
 	
 <main>
 	<div id="container" style=" margin:0px ; column-count:3 ;min-width: 33%; column-gap: 20px;padding:20px;break-inside: avoid;"> 
-		<ul style="position: relative; height: 100%; width: 100%">
+		<ul style="position: relative; height: 100%; width: 100%;margin: 10px;">
 			{% for book in queryset %}
-			<div class="search-card" style="padding:10px; display:inline-block; border: 1px solid;">
+			<div class="search-card" style="display:inline-block; border: 1px solid;align-items:center; min-width: 100%;">
 				<div class="media" style="min-height: 300px; display: flex; font-size: 1.7vh; padding: 10px; break-inside: avoid;">
 					
 					<img src="{{ book.thumbnail }}" height="192px" width="128px"> 
@@ -84,11 +84,16 @@
 							<li><b>Pages:</b> <span style="font-size: 1.4vh;">{{ book.num_pages }}</span></li>
 							<li><b>Store inventory:</b> <a href="{% url 'adjust_qty' book.id%}"><span style="font-size: 1.4vh;">{{book.book_id.quantity}}</span></a></li>
 						</ul>
+
 					</div>
+					
 				</div>
+				
 			</div>
+			
 			{% endfor %}
 		</ul>
+		
 	</div>
 </main>
 </body>
