adding headers, footers, etc

--- a/BombasticBookstore/bombasticbookstore/templates/adjust_qty.html
+++ b/BombasticBookstore/bombasticbookstore/templates/adjust_qty.html
@@ -1,6 +1,9 @@
 {% extends "logo.html" %}
 
-<h1>Update book</h1>
+<header>
+    <h1>Adjust Quantity</h1>
+    <p>Update inventory below.</p>
+</header>
 
 {% block content %}
 
