--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -18,8 +18,10 @@
 	<main>
 
 	<div class="card-container">
-		<h1>Main Menu</h1>
-
+		<header>
+			<h1>Main Menu</h1>
+			<p>Welcome to your Inventory Management System. Select an option below to get started.</p>
+		</header>
 		<div class="card">
 		<nav>
 			<ul>
