--- a/BombasticBookstore/bombasticbookstore/templates/report.html
+++ b/BombasticBookstore/bombasticbookstore/templates/report.html
@@ -50,5 +50,8 @@
 		</table>
 	</main>
 </body>
+<footer>
+    <p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
+</footer>
 </html>
 {% endblock %}
