--- a/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
+++ b/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
@@ -26,6 +26,9 @@
 		</div>
 	</div>
 </main>
+<footer>
+    <p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
+</footer>
 {% endblock %}
 </body>
 </html>
