--- a/BombasticBookstore/bombasticbookstore/templates/add_book/add_book.html
+++ b/BombasticBookstore/bombasticbookstore/templates/add_book/add_book.html
@@ -19,6 +19,9 @@
 		</form>
 	</div>
 </main>
+<footer>
+    <p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
+</footer>
 {% endblock %}
 </body>
 
