--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -3,53 +3,53 @@
 {% load static %}
  
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Search Results - Bombastic Bookstore</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+	<link rel="stylesheet" href="{% static 'styles/general.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/theme.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/header.css' %}">
+    <!-- .media{display:-ms-flexbox;display:flex;-ms-flex-align:start;align-items:flex-start} -->
+	<!-- .media-body{-ms-flex:1;flex:1} -->
 </head>
+
 <body class="{% if request.COOKIES.theme %}{{ request.COOKIES.theme }}{% else %}light{% endif %}">
-	<header style="background-color:powderblue; position:sticky; top:0; padding: 10px;">
-		<h1 align="center">Search Results</h1>
-	</header>
-
-	<main>
-		<div class="container mt-4">
-			<ul>
-				{% for book in object_list %}
-				<div class="card mb-4">
-					<div class="media p-3">
-						<img src="{{ book.thumbnail }}" height="192px" width="128px" alt="Book Thumbnail">
-						<div class="media-body ml-3">
-							<ul>
-								<li><b>ISBN:</b> {{ book.isbn10 }}</li>
-								<li><b>Title:</b> {{ book.title }}</li>
-								<li><b>Author:</b> {{ book.author_first }} {{ book.author_last }}</li>
-								<li><b>Category:</b> {{ book.categories }}</li>
-								<li><b>Publication Year:</b> {{ book.published_year }}</li>
-								<li><b>Pages:</b> {{ book.num_pages }}</li>
-								<li><b>Store Inventory:</b> <a href="{% url 'adjust_qty' book.id %}">{{ book.book_id.quantity }}</a></li>
-							</ul>
-							{% if book.isbn10 %}
-							<a href="{% url 'confirm_remove_item' book.isbn10 %}" onclick="return confirm('Are you sure you want to remove this book?');" class="btn btn-danger btn-sm mt-2">
-								Remove Book
-							</a>
-							{% else %}
-							<p class="text-danger">ISBN not available</p>
-							{% endif %}
-						</div>
-					</div>
-				</div>
-				{% endfor %}
-			</ul>
+	{% block content %}
+	<ul>
+		{% for book in object_list %}
+	<div>
+		<div class="search-card">
+		  <div class="close-button">
+			{% if book.isbn10 %}
+			<a href="{% url 'confirm_remove_item' book.isbn10 %}" onclick="return confirm('Are you sure you want to remove this book?');">
+			  <span class="close">&times;</span>
+			</a>
+			 {% endif %}
+		  </div>
+		  <div class="media" style="display: flex;">
+			<img src="{{ book.thumbnail }}" height="192px" width="128px" > 
+			<div class="media-body" style="margin-top: auto; margin-bottom: auto;">
+				<ul>
+				  <li><b>ISBN:</b> {{ book.isbn10 }}</li>
+				  <li><b>Title:</b> {{ book.title }}</li>
+				  <li><b>Author:</b> {{ book.author_first }} {{ book.author_last }}</li> 
+				  <li><b>Category:</b> {{ book.categories }}</li>
+				  <li><b>Pub year:</b> {{ book.published_year }}</li>
+				  <li><b>Pages:</b> {{ book.num_pages }}</li>
+				  <li><b>Store inventory:</b> <a href="{% url 'adjust_qty' book.id%}">{{book.book_id.quantity}}</a></li>
+				</ul>
+			</div>
+			<br>
+		  </div>
 		</div>
-	</main>
-
-	<footer class="text-center mt-4 p-3" style="background-color: #f8f9fa;">
+	</div>
+      <br>
+        {% endfor %}
+    </ul>
+	<footer>
 		<p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
 	</footer>
+	{% endblock %}
 </body>
 </html>
 
