--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -36,10 +36,13 @@
 </head>
 <body>
 	<main>
-    <h1>Welcome to Bombastic Bookstore</h1><br>
-	<div class="container">
-		<div>
+	<div class="container" style="display: flex;">
+		<div style="flex: 1;">
+		  <img class="bookstore-image" height="500px" width="500px" src='{% static "./IsometricBookstore.png" %}' alt="Bombastic Bookstore Image">
+		</div>
+		<div style="display:inline-block; flex: 1;">
 		  <div class="login">
+			  <h1>Welcome to Bombastic Bookstore</h1><br>
 			  <span class="toggle-switch opt1">
 				<h2 style="display: block">Log In</h2>
 				<form action="{% url 'login' %}" method="post">
