--- a/BombasticBookstore/bombasticbookstore/templates/registration/signup.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/signup.html
@@ -1,10 +1,26 @@
 {% load static %}
-<head>
-<link rel="stylesheet"  href="{% static 'styles/login.css' %}">
-</head>
-<h2>Sign Up</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-success" type="submit">Sign Up</button>
-</form>
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet"  href="{% static 'styles/login.css' %}">
+	</head>
+	<body>
+		<main>
+			<div class="container" style="display: flex">
+				<div style="flex: 1;">
+				  <img class="bookstore-image" height="500px" width="500px" src='{% static "./IsometricBookstore.png" %}' alt="Bombastic Bookstore Image">
+				</div>
+				<div style="flex: 1; display: inline-block;">
+				<h2>Sign Up</h2>
+					<form method="post">
+						{% csrf_token %}
+						{{ form.as_p }}
+						<button class="btn btn-success" type="submit">Sign Up</button>
+					</form>
+					<a href="{% url 'logout' %}">Already Have an Account? Login</a>
+				</div>
+			</div>
+		</main>
+	</body>
+</html>
