--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 	<main>
-    <h1>Welcome to Bombastic Bookstore</h1><br>
+    <h1 class="welcome">Welcome to Bombastic Bookstore</h1><br>
 	<div class="container">
 	<div class="card">
 	  <div class="login">
