--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -42,7 +42,7 @@
 		</div>
 		<div style="display:inline-block; flex: 1;">
 		  <div class="login">
-			  <h1>Welcome to Bombastic Bookstore</h1><br>
+			  <h1 class="welcome">Welcome to Bombastic Bookstore</h1><br>
 			  <span class="toggle-switch opt1">
 				<h2 style="display: block">Log In</h2>
 				<form action="{% url 'login' %}" method="post">
