--- a/BombasticBookstore/bombasticbookstore/static/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/general.css
@@ -2,6 +2,7 @@ main {
   margin-top: 1.5%;
   margin-left: 1.5%;
   margin-right: 1.5%;
+  margin-bottom: 100px;
   display: flex;
   color: white;
   padding: 10vh;
