--- a/BombasticBookstore/bombasticbookstore/templates/logo.html
+++ b/BombasticBookstore/bombasticbookstore/templates/logo.html
@@ -27,7 +27,7 @@
             <img class="bomb-logo" src='{% static "./bomb_no_text.png" %}' alt="Bombastic Bookstore Logo">
         </div>
         <div class="middle-section theme-dependent">
-            <p>Bombastic Bookstore</p>
+            <p style="display: inline">Bombastic Bookstore</p>
         </div>
         <div class="right-section theme-dependent">
             <p>Welcome, {{ user.username }}!</p>
