--- a/BombasticBookstore/bombasticbookstore/static/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/general.css
@@ -43,7 +43,7 @@ height: 100px;
 
 /* Navigation Styling */
 .nav-bar {
-margin-top: 100px; /* Adjusted for fixed header */
+margin-top: 10vh; /* Adjusted for fixed header */
 background-color: black;
 padding: 10px 0;
 text-align: center;
